ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-ingress
  namespace: gatus
  labels:
    name: gatus-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: monitoring.stratta.cloud
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: gatus-service
            port: 
              number: 5432
